--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@graphql-tools/graphql-file-loader": "^6.2.7",
     "@graphql-tools/load": "^6.2.5",
     "apollo-server-express": "^2.21.0",
+    "apollo-server-plugin-response-cache": "^0.7.0",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.25.0",
     "cors": "^2.8.5",
